add build-and-run.sh